Update workflow to use xdebug for coverage

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php_versions }}
+        coverage: xdebug
 
 
     - name: Validate composer.json and composer.lock
