--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
       }
     ],
     "require": {
-        "php": "^7.2|^8.0",
+        "php": "^7.3|^8.0",
         "nesbot/carbon": "^2.20"
     },
     "autoload": {
@@ -20,7 +20,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.2",
+        "phpunit/phpunit": "^8.2|^9.0",
         "symfony/dom-crawler": "^4.3",
         "symfony/css-selector": "^4.3"
     }
