--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php_versions: ['7.2', '7.3', '7.4', '8.0']
+        php_versions: ['7.3', '7.4', '8.0']
 
     steps:
     - uses: actions/checkout@v2
