--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.2",
+        "phpunit/phpunit": "^8.2|^9.0",
         "symfony/dom-crawler": "^4.3",
         "symfony/css-selector": "^4.3"
     }
