--- a/composer.json
+++ b/composer.json
@@ -3,25 +3,25 @@
     "description": "PHP library for AIRAC date information",
     "type": "library",
     "license": "MIT",
-    "authors" : [
-      {
-        "name" : "Alex Toff",
-        "email" : "alex@cobaltgrid.com",
-        "homepage" : "https://www.cobaltgrid.com"
-      }
+    "authors": [
+        {
+            "name": "Alex Toff",
+            "homepage": "https://cobaltgrid.com"
+        }
     ],
     "require": {
-        "php": "^7.2|^8.0",
-        "nesbot/carbon": "^2.20"
+        "php": "^7.2|^8.0"
     },
     "autoload": {
         "psr-4": {
-            "CobaltGrid\\Aviation\\": "src/"
+            "CobaltGrid\\AIRACCalculator\\": "src/"
         }
     },
     "require-dev": {
         "phpunit/phpunit": "^8.2|^9.0",
         "symfony/dom-crawler": "^4.3",
-        "symfony/css-selector": "^4.3"
+        "symfony/css-selector": "^4.3",
+        "larapack/dd": "1.*",
+        "laravel/pint": "^1.10"
     }
 }
