Make pint suggested

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,5 +23,8 @@ jobs:
     - name: 📦 install PHP dependencies
       uses: ramsey/composer-install@v2
 
+    - name: 📦 install linter
+      uses: composer install laravel/pint
+
     - name: Run linter
       run: vendor/bin/pint --test
