--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php_versions: ['7.2', '7.3', '7.4', '8.0', '8.2']
+        php_versions: ['8.1', '8.2']
 
     steps:
     - name: '☁️ checkout repository'
