--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "phpunit/phpunit": "^8.2|^9.0",
         "symfony/dom-crawler": "^4.3",
         "symfony/css-selector": "^4.3",
-        "larapack/dd": "1.*"
+        "larapack/dd": "1.*",
+        "laravel/pint": "^1.10"
     },
     "suggest": {
         "laravel/pint": "Required to lint the project"
