--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,33 +5,30 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  schedule:
-  - cron: "0 12 1 * *"
 
 jobs:
-  build:
-    
+  test:
     name: CI on PHP ${{matrix.php_versions}}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php_versions: ['7.2', '7.3', '7.4', '8.0']
+        php_versions: ['8.1', '8.2']
 
     steps:
-    - uses: actions/checkout@v2
+    - name: '☁️ checkout repository'
+      uses: actions/checkout@v2
 
-    - name: Install PHP
+    - name: 🐘 setup PHP
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php_versions }}
         coverage: xdebug
 
-
-    - name: Validate composer.json and composer.lock
+    - name: ✅ validate composer.json and composer.lock
       run: composer validate
       
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
+    - name: 📦 install PHP dependencies
+      uses: ramsey/composer-install@v2
 
-    - name: Run PHPUNIT
+    - name: 👩‍💻 run phpunit
       run: vendor/bin/phpunit --coverage-text
