--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.0"
+        "php": "^8.0"
     },
     "autoload": {
         "psr-4": {
@@ -23,8 +23,5 @@
         "symfony/css-selector": "^4.3",
         "larapack/dd": "1.*",
         "laravel/pint": "^1.10"
-    },
-    "suggest": {
-        "laravel/pint": "Required to lint the project"
     }
 }
