--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
             "CobaltGrid\\AIRACCalculator\\": "src/"
         }
     },
+    "scripts": {
+        "test": "phpunit"
+    },
     "require-dev": {
         "phpunit/phpunit": "^8.2|^9.0",
         "symfony/dom-crawler": "^4.3",
